--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
+/* main color : #087f5b
+text colors: #343a40
+
+*/
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
+/* ------------------------ */
+/* GENERAL STYLES */
+/* ------------------------ */
 body {
 	font-family: 'Inter', sans-serif;
-	font-optical-sizing: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	overflow: hidden;
+	color: #343a40;
+	border-bottom: 8px solid #087f5b;
 }
