Refactor accordion content for improved readability and structure

--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ body {
 }
 
 .item {
+	box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
+	padding: 24px;
+	display: grid;
+	grid-template-columns: auto 1fr auto;
+	column-gap: 20px;
+	row-gap: 32px;
+	align-items: center;
 }
 .number,
 .text {
@@ -42,6 +49,7 @@ body {
 	stroke: #087f5b;
 }
 .hidden-box {
+	grid-column: 2;
 }
 
 .hidden-box p {
